# gpu-image-segmentation

./: CMakeLists.txt  README
src/cpu/: gaussian.cpp  gaussian.hpp  image_io.cpp  image_io.hpp  labeling.cpp  labeling.hpp  main_cpu.cpp  threshold.cpp  threshold.hpp
src/gpu/: gaussian.cu  gaussian.cuh  labeling.cu  labeling.cuh  main_gpu.cu  threshold.cu  threshold.cuh
src/tests/: test_main.cpp
